; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_find_programdata.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config.c_git_config_find_programdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_CONFIG_FILENAME_PROGRAMDATA = common dso_local global i32 0, align 4
@GIT_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_find_programdata(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = call i32 @git_buf_sanitize(%struct.TYPE_5__* %5)
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = load i32, i32* @GIT_CONFIG_FILENAME_PROGRAMDATA, align 4
  %9 = call i32 @git_sysdir_find_programdata_file(%struct.TYPE_5__* %7, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @GIT_OK, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %4, align 4
  store i32 %14, i32* %2, align 4
  br label %20

15:                                               ; preds = %1
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @git_path_validate_system_file_ownership(i32 %18)
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %15, %13
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @git_buf_sanitize(%struct.TYPE_5__*) #1

declare dso_local i32 @git_sysdir_find_programdata_file(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @git_path_validate_system_file_ownership(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
